--- a/classlist.html
+++ b/classlist.html
@@ -2,8 +2,8 @@
 <head>
 </head>
 <body>
-List of numbers: <br/>
-1068573 <br/>
-1560612 <br/>
+Student Id number: <br/>
+1569530 <br/>
+ <br/>
 </body>
 </html>
